[package]
name = "scaap"
version = "0.1.0"
authors = ["Nicu Reut <contact@nicu.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
toml = "0.4.2"
serde = "1.0.117"
serde_derive = "1.0.117"
